--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-remote_theme: pages-themes/leap-day@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-leap-day
 
 title:  [jzwritescode] Fun With Coding
 description:  Resources related to coding based on best practices and things I may be working on.
