--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-leap-day
-title:  [jzwritescode] Fun With Coding
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have onetitle:  [jzwritescode] Fun With Coding
 description:  Resources related to coding based on best practices and things I may be working on.
